@@ -7,7 +7,7 @@
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+          https://www.apache.org/licenses/LICENSE-2.0
 
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,13 +16,13 @@
        limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis-parent</artifactId>
-    <version>34</version>
+    <version>35</version>
     <relativePath />
   </parent>
 
@@ -55,8 +55,8 @@
     <url>https://github.com/mybatis/spring-boot-starter/issues</url>
   </issueManagement>
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/mybatis/spring-boot-starter</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/mybatis/spring-boot-starter/actions</url>
   </ciManagement>
   <distributionManagement>
     <site>
@@ -73,6 +73,8 @@
     <mybatis-velocity.version>2.1.1</mybatis-velocity.version>
     <mybatis-thymeleaf.version>1.0.3</mybatis-thymeleaf.version>
     <spring-boot.version>2.7.3</spring-boot.version>
+
+    <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
   </properties>
 
   <build>
@@ -101,10 +103,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <!-- Add setting 'file.encoding' for Windows environment -->
-            <argLine>${argLine} -Djdk.attach.allowAttachSelf -Dfile.encoding=UTF-8</argLine>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
